# libopz

./: .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md
examples/: CMakeLists.txt  hopz.cpp  opz_companion.cpp  opz_dump.cpp  opz_memory.cpp  opz_tracks.cpp
include/libopz/: opz_device.h  opz_project.h  opz_rtmidi.h  tools.h
opz_dump/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  OPZ.cpp  OPZ.h  OPZ_RtMidi.cpp  OPZ_RtMidi.h  main.cpp  opz_device.cpp  opz_device.h  opz_file.cpp  opz_file.h  opz_project.cpp  opz_project.h  opz_rtmidi.cpp  opz_rtmidi.h  tools.cpp  tools.h
